[package]
name = "chumbucket"
version = "0.3.2"
description = "Chums through manifest, include, and index files"
authors = ["rumblefrog <contact@rumblefrog>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../libschema" }
alternator = { path = "../libalternator" }
walker = { path = "../libwalker" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = "3"
git2 = "0.13"
serde = "1"
serde_json = "1"
toml = "0.5"
