[package]
name = "sp-docgen"
version = "2.3.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
serde_json = "1.0.44"
mono = { path = "../mono" }
futures = "0.3"
reqwest = "0.9.24"

[dependencies.spdcp]
version = "0.4.4"
features = ["serde"]

[build-dependencies]
bindgen = "0.52.0"
