[package]
name = "alternator"
version = "0.2.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../libschema" }
spdcp = { version = "0.4.4", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
bindgen = "0.59"
