[package]
name = "schema"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdcp = { version = "0.4.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
