[package]
name = "schema"
version = "0.2.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdcp = { version = "0.4.4", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
