[package]
name = "sitemap"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
schema = { path = "../libschema" }
alternator = { path = "../libalternator" }
treexml = "0.7"
serde_json = "1.0.44"

[dependencies.spdcp]
version = "0.4.4"
features = ["serde"]
